--- a/CV.html
+++ b/CV.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bootstrap 101 Template</title>
+    <title>CV master</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
   </head>
@@ -9,9 +9,9 @@
     <h2>CV master</h2>
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <textarea rows="10" cols="50"></textarea>
-    <div class="form-actions">
-      <button type="submit" class="btn btn-primary">Save</button>
-    </div>
+    <form action="cv.txt">
+       <textarea rows="10" cols="50"></textarea>
+       <button type="submit" class="btn btn-primary">Save</button>
+    </form>
   </body>
 </html>
