the button makes a post request

--- a/CV.html
+++ b/CV.html
@@ -9,9 +9,12 @@
     <h2>CV master</h2>
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <form action="cv.txt">
-       <textarea rows="10" cols="50"></textarea>
+    <!-- Makes a HTML post request when clicking the button-->
+    <form action="api/post" method="post">
+       <textarea type="text" rows="10" cols="50" name="textfield"></textarea>
+       <div class="form-actions">
        <button type="submit" class="btn btn-primary">Save</button>
+       </div>
     </form>
   </body>
 </html>
