--- a/CV.html
+++ b/CV.html
@@ -9,7 +9,7 @@
     <h2>CV master</h2>
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <!-- Makes a HTML post request when clicking the button-->
+    <!-- Makes an HTML post request when clicking the button-->
     <form action="api/post" method="post">
        <textarea type="text" rows="10" cols="50" name="textfield"></textarea>
        <div class="form-actions">
