--- a/CV.html
+++ b/CV.html
@@ -1,28 +1,39 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>CV master</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-  </head>
-  <body>
-    <h2>CV master</h2>
-    <script src="http://code.jquery.com/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script>
+<head>
+  <title>CV master</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--link href="css/bootstrap.min.css" rel="stylesheet" media="screen"-->
+</head>
+<body>
+  <h2>CV master</h2>
+  <script src="http://code.jquery.com/jquery.js"></script>
+  <!--script src="js/bootstrap.min.js"></script-->
 
-      fetch('api/get').then(function(response) {
-          document.getElementById("textfield").value = response.text()
-      }, function(error) {
-        return console.log("Error!")
-      })
-    </script>
-    <!-- Makes a HTML post request when clicking the button-->
-    <form action="api/post" method="post">
-       <textarea type="text" rows="10" cols="50" id="textfield" name="textfield"></textarea>
-       <div class="form-actions">
-       <button type="submit" class="btn btn-primary">Save</button>
-       </div>
-    </form>
-  </body>
+  <script>
+
+  fetch('api/get').then(function(response) {
+    if (response.status !== 200) {
+      console.log('Looks like there was a problem. Status Code: ' +
+      response.status);
+      return;
+    }
+    response.text().then(function(data) {
+      document.getElementById("textfield").value = data
+    });
+
+
+  }, function(error) {
+    return console.log("Error!")
+  })
+  </script>
+
+  <!-- Makes an HTML post request when clicking the button-->
+  <form action="api/post" method="post">
+    <textarea type="text" rows="10" cols="50" id="textfield" name="textfield"></textarea>
+    <div class="form-actions">
+      <button type="submit" class="btn btn-primary">Save</button>
+    </div>
+  </form>
+</body>
 </html>
