Center text in PDF footer.

--- a/server/pdf/footer.html
+++ b/server/pdf/footer.html
@@ -1,9 +1,7 @@
 <footer>
   <div class="reaktor_contact">
-    <ul id="footer_list">
-      <li>Reaktor Innovations Oy</li>
-      <li>Mannerheimintie 2, 00100 Helsinki, Finland</li>
-      <li><a href="www.reaktor.com">www.reaktor.com</a></li>
-    </ul>
+      Reaktor Innovations Oy
+      Mannerheimintie 2, 00100 Helsinki, Finland
+      <a href="www.reaktor.com">www.reaktor.com</a>
   </div>
 </footer>
