Remove Reaktor from PDF

--- a/server/pdf/footer.html
+++ b/server/pdf/footer.html
@@ -1,7 +1,7 @@
 <footer>
-  <div class="reaktor_contact">
-      Reaktor Innovations Oy
-      Mannerheimintie 2, 00100 Helsinki, Finland
-      <a href="www.reaktor.com">www.reaktor.com</a>
+  <div class="footer_contact">
+      Company Oy
+      Generic Street 100, 00100 Helsinki, Finland
+      <a href="www.google.com">www.company.com</a>
   </div>
 </footer>
