Fix header text alignment and font in header/footer.

--- a/server/pdf/header.html
+++ b/server/pdf/header.html
@@ -4,8 +4,7 @@
   '/>
 
   <div class="confidential">
-    CURRICULUM VITAE
-    <br>
+    CURRICULUM VITAE<br>
     Confidential
   </div>
 </header>
